<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/appearance">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/ThemeEntries"
            android:entryValues="@array/ThemeEntryValues"
            android:icon="@drawable/ic_brush_24dp"
            android:key="@string/_pref_theme"
            android:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:allowDividerAbove="true">

        <Preference
            android:icon="@drawable/ic_bubble_24dp"
            android:key="@string/_pref_send_feedback"
            android:title="@string/send_feedback" />

        <Preference
            android:icon="@drawable/ic_code_24dp"
            android:key="@string/_pref_open_source_licences"
            android:title="@string/open_source_licences" />

        <Preference
            android:icon="@drawable/ic_info_24dp"
            android:key="@string/_pref_app_version"
            android:title="@string/app_version" />

    </PreferenceCategory>

</PreferenceScreen>
