<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <Preference
            android:key="@string/_pref_sign_in"
            android:icon="@drawable/ic_google_20dp"
            android:title="@string/sign_in_with_google"
            android:summary="@string/sign_in_pref_summary"
            app:isPreferenceVisible="false"
            tools:isPreferenceVisible="true" />

        <Preference
            android:key="@string/_pref_sign_out"
            android:icon="@drawable/ic_sign_out_24dp"
            android:title="@string/sign_out"
            app:isPreferenceVisible="false"
            tools:isPreferenceVisible="true" />

</PreferenceScreen>